--- a/wiki/ChangeLog.wiki
+++ b/wiki/ChangeLog.wiki
@@ -1,12 +1,12 @@
 #labels Phase-Design
-#ChangeLog
+=ChangeLog=
 
-= Note =
+== Note ==
 
 This project is still in a very early stage and is not suitable for production. Except the templating engine, this project is written from scratch. If you wish to contribute to this project, please contact the project [mailto:yanick.rochon@gmail.com owner].
 
 
-= version alpha r2 =
+=== version alpha r2 ===
 
   * can handle basic requests (rendering engine not yet hooked to dispatcher)
   * can serve some static content
